# RTX

./: CMakeLists.txt  Matrix.hpp  main.cpp
LinearAlg_libs/: CMakeLists.txt  Mat_types.hpp  Matrix.hpp  Ray.cpp  Ray.hpp  Shapes.hpp
